tests/valid/test6.wf
bandera = TRUE OR FALSE;
print(bandera);
