tests/invalid/error4.wf
a = TRUE OR;
print(a);
